# mjlab_jump_style

./: README.md  play.py  pyproject.toml  requirements.txt  train.py
embeddings/: jump_mean.t2m_emb.pt
mjlab_jump_style/: __init__.py  jumping_env_cfg.py
mjlab_jump_style/config/g1/: flat_env_cfg.py
mjlab_jump_style/mdp/: rewards.py  terminations.py
mjlab_jump_style/utils/: motion_features.py  motion_vae_encoder.py  t2m_motion_encoder.py
sky/: sky_task.yaml
src/mjlab_jump_style/: __init__.py  flat_env_cfg.py  jumping_env_cfg.py  rl_cfg.py
src/mjlab_jump_style/mdp/: __init__.py  events.py  observations.py  rewards.py
src/mjlab_jump_style/utils/: motion_encoding.py  motion_vae_encoder.py  t2m_motion_encoder.py
